--- a/SingleGalaxySiblingsAnalysis.ipynb
+++ b/SingleGalaxySiblingsAnalysis.ipynb
@@ -13,11 +13,11 @@
    "id": "061624ed",
    "metadata": {},
    "source": [
-    "Here, I summarise the key milestones in my analysis of three Type Ia Supernovae (SNe Ia) that exploded in the spiral galaxy NGC 3147: SNe 2021hpr, 1997bq and 2008fv; **supernovae with a common host galaxy are called 'supernova siblings'.** \n",
+    "This repo summarises key milestones from analysing three Type Ia Supernovae (SNe Ia) that exploded in the spiral galaxy NGC 3147: SNe 2021hpr, 1997bq and 2008fv; **supernovae with a common host galaxy are called 'supernova siblings'.** \n",
     "\n",
-    "This work involved learning the *BayeSN* hierarchical Bayesian model for fitting spatio-temporal data of SNe Ia (light curves), and then adapting it to fit siblings light curves simulataneously. I present here my *Stan* code for hierarchically fitting the siblings light curves.\n",
+    "This work used the *BayeSN* hierarchical Bayesian model for spatio-temporal data of SNe Ia (light curves), and built on it to fit siblings light curves simultaneously (new *Stan* code below).\n",
     "\n",
-    "I also introduced the relative intrinsic scatter parameter, $\\sigma_{\\rm{Rel}}$, to account for the limited - but unknown - correlation between siblings. I found this parameter affects not only the distance estimate, but also the posteriors on all other parameters of interest (e.g. dust extinction, light-curve shape). Therefore, marginalising over this parameter is a fundamental procedure which should be implemented going forward in any SN siblings analysis. \n",
+    "This framework introduces the relative intrinsic scatter parameter, $\\sigma_{\\rm{Rel}}$, to account for the limited - but unknown - correlation between siblings. This parameter is found to affect all parameters of interest, including the distance, dust extinction, and light-curve shapes for each sibling. Therefore, marginalising over $\\sigma_{\\rm{Rel}}$ is a fundamental procedure that should be implemented going forward in any siblings analysis. \n",
     "\n",
     "The final analysis involved estimating the expansion rate of the Universe, the Hubble constant, $H_0$, by simultaneously fitting the siblings light curves with a Cepheid distance to NGC 3147, and *BayeSN* distances to a Hubble flow sample of 109 SNe Ia."
    ]
@@ -320,7 +320,7 @@
    "metadata": {},
    "source": [
     "## Moreover, the intrinsic scatter assumptions affect the inferences on all parameters of interest, not just the distance\n",
-    "For example, we see the distance uncertainty is minimised when we assume we assume the intrinsic scatter components are perfectly uncorrelated amongst the siblings.\n",
+    "For example, we see the distance uncertainty is minimised when we assume the intrinsic scatter components are perfectly uncorrelated amongst the siblings.\n",
     "\n",
     "However, chromatic parameters behave in the opposite sense, where their uncertainties are minimised when the intrinsic scatter components are perfectly correlated amongst the siblings.\n",
     "\n",
@@ -709,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
